--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "material-icons": "^1.11.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-material-ui-carousel": "^3.4.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
