--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "test_engine",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8085",
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
