--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-material-ui-carousel": "^3.4.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
+    "react-router-prompt": "^0.2.1",
     "react-scripts": "5.0.1",
     "react-window": "^1.8.7",
     "web-vitals": "^2.1.4"
