--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.27.2",
     "clsx": "^1.2.1",
     "hh-mm-ss": "^1.2.0",
+    "jquery": "^3.6.1",
     "react": "^18.2.0",
     "react-ace": "^10.1.0",
     "react-countdown": "^2.3.2",
