--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.3.0",
     "react-router-prompt": "^0.2.1",
     "react-scripts": "5.0.1",
+    "react-use-error-boundary": "^3.0.0",
     "react-window": "^1.8.7",
     "web-vitals": "^2.1.4"
   },
